--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
 
     - name: Install Dependencies
       run: |
-        make install
+        pip3 install -r requirements.txt
 
     - name: Execute Tests
       run: |
-        make test
+        pytest test.py
